remove all other / symbol in order to fix image calling

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <div class="icon_and_text ">
                     <div class="icon">
                      <a href="">
-                        <img src="/Assets/icons8-article.svg" width="24" height="24">
+                        <img src="Assets/icons8-article.svg" width="24" height="24">
                      </a>
                     </div>
                 <div class="text">
@@ -33,7 +33,7 @@
                 <div class="icon_and_text">
                    <div class="icon">
                       <a href="">
-                            <img src="/Assets/icons8-people-24.png" width="24" height="24">
+                            <img src="Assets/icons8-people-24.png" width="24" height="24">
                       </a>
                 </div>
                 <div class="text">
@@ -44,7 +44,7 @@
                  <div class="icon_and_text">
                      <div class="icon">
                          <a href="">
-                        <img src="/Assets/icons8-e-learning-50.png" width="24" height="24">
+                        <img src="Assets/icons8-e-learning-50.png" width="24" height="24">
                         </a>
                 </div>
                 <div class="text">
@@ -55,7 +55,7 @@
                  <div class="icon_and_text">
                   <div class="icon">
                     <a href="">
-                        <img src="/Assets/icons8-suitcase-64.png" width="23" height="23">
+                        <img src="Assets/icons8-suitcase-64.png" width="23" height="23">
                     </a>
                 </div>
                 <div class="text">
@@ -66,7 +66,7 @@
                  <div class="icon_and_text">
                     <div class="icon">
                         <a href="">
-                             <img src="/Assets/icons8-puzzle.svg" width="23" height="23">
+                             <img src="Assets/icons8-puzzle.svg" width="23" height="23">
                         </a>
                     </div>
                     <div class="text">
@@ -101,7 +101,7 @@
                  border-radius: 50%;
                  width: 38px;
                  height: 38px;">
-                 <img src="/Assets/icons8-google.svg" alt="" style="
+                 <img src="Assets/icons8-google.svg" alt="" style="
                 transform: translate(0px, 1px);
                 width: 25px;
                 height: 36px;"></div>
@@ -250,11 +250,11 @@
             <p>With the Open To Work feature, you can privately tell recruiters or publicly share with the LinkedIn community that you are looking for new job opportunities.</p>
         </div>
         <div class="section_6_flex_container_2">
-           <img src="/Assets/face.png" alt="">
+           <img src="Assets/face.png" alt="">
         </div>
         <div class="next_button">
             <button>
-                <img src="/Assets/icons8-right-64.png" width="27" height="34">
+                <img src="Assets/icons8-right-64.png" width="27" height="34">
             </button>
         </div>
     </section>
@@ -263,10 +263,10 @@
 
     <section class="sec_8_container">
         <div class=" item sec_8_pic-1">
-            <img src="/Assets/clapping.svg" width="256" height="256" alt="">
+            <img src="Assets/clapping.svg" width="256" height="256" alt="">
         </div>
         <div class="item sec_8_pic-2">
-            <img src="/Assets/infrontofcomputer.svg" width="256" height="256" alt="">
+            <img src="Assets/infrontofcomputer.svg" width="256" height="256" alt="">
         </div>
         <div class="text_sec_8 sec_8_text_1">
            <span> Connect with people who can help</span>
@@ -281,7 +281,7 @@
         </div>
         <div class=" sec_8_text-2 sec_8_button_2">
             <button class="sec_8_button_text">
-                Choose a topic to learn about <img src="/Assets/icons8-down-arrow-64.png " style="transform: translate(0px,10px);" width="34" height="34">
+                Choose a topic to learn about <img src="Assets/icons8-down-arrow-64.png " style="transform: translate(0px,10px);" width="34" height="34">
             </button>
         </div>
     </section>
@@ -307,7 +307,7 @@
             </div>
         </div>
         <div class="sec_9_flex_container-2">
-            <img src="/Assets/school.png" width="800" height="800" alt="">
+            <img src="Assets/school.png" width="800" height="800" alt="">
         </div>
     </section>
 
@@ -332,7 +332,7 @@
     <!-- section 11 -->
 
     <section class="section_11_container">
-        <img src="/Assets/group.jpeg" alt="">
+        <img src="Assets/group.jpeg" alt="">
         <div class="sec_11_cnt">
             <div class="sec_11_align sec_11_txt">
                 Join your colleagues, classmates, and friends on LinkedIn.
@@ -356,7 +356,7 @@
     <section class="footer_sec_1_container">
         <div class="link_division">
             <div class="logo_division">
-                <img src="/Assets/latest-linkedin-logo.png" width="84" height="21" alt="">
+                <img src="Assets/latest-linkedin-logo.png" width="84" height="21" alt="">
             </div>
             <div class="division_1 common_division">
                 <!-- General -->
@@ -414,7 +414,7 @@
 
     <section class="footer_sec_2_container">
         <div class="foot_sec_2_flex">
-        <div><img src="/Assets/latest-linkedin-logo.png" width="64" height="16"></div>
+        <div><img src="Assets/latest-linkedin-logo.png" width="64" height="16"></div>
         <div>© 2024</div>
         <div><a href="">About</a></div>
         <div><a href="">Accessibility</a></div>
